--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/space-favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/space-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Explore the cosmos in this interactive 3D solar system simulation. Journey from the Sun to the outer planets, accompanied by Nexus, your AI guide." />
