--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Explore the cosmos in this interactive 3D solar system simulation. Journey from the Sun to the outer planets, accompanied by Nexus, your AI guide." />
-  <title>Cosmic Helix - Interactive Solar System</title>
+  <title>Cosmic Nexus - Interactive System</title>
 </head>
 
 <body>
